Fix mobile scrollbar and bottom view

--- a/src/Style.css
+++ b/src/Style.css
@@ -4,6 +4,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* 
+body {
+  overflow:;
+} */
 
 .display-no {
   display: none;
